--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  flutter_spinkit: "^4.1.2"
   archive: ^3.1.2
   dio: ^4.0.0
   cupertino_icons: ^1.0.2
