--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+code-server-3.12.0-linux-arm64.tar.gz
+code-server-4.0.1-linux-arm64.tar.gz
+code-server-4.4.0-linux-arm64.tar.gz
