--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: vscode_for_android
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.0.0+1
+version: 1.1.2+4
 environment:
   sdk: ">=2.10.0 <3.0.0"
 
@@ -13,23 +13,18 @@ dependencies:
   archive: ^3.1.2
   dio: ^4.0.0
   cupertino_icons: ^1.0.2
-  termare_pty:
-    git: https://github.com/Termare/termare_pty
-
-  pty:
-    git: https://github.com/TerminalStudio/pty
   xterm:
-    path: /Users/nightmare/Desktop/TerminalStudio/xterm.dart
-  pseudo_terminal_utils:
-    git: https://github.com/Termare/pseudo_terminal_utils.git
+    git:
+      url: https://github.com/TerminalStudio/xterm.dart
+      ref: v3
+  flutter_pty:
+    git: https://github.com/TerminalStudio/flutter_pty
   global_repository:
     git: https://github.com/nightmare-space/global_repository
-  termare_view:
-    git: https://github.com/Termare/termare_view
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.0
 flutter:
   uses-material-design: true
   assets:
@@ -39,3 +34,5 @@ flutter:
 dependency_overrides:
   termare_pty:
     path: /Users/nightmare/Desktop/termare-space/termare_pty
+  xterm:
+    path: ../xterm
