--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,7 @@
             "name": "平板",
             "request": "launch",
             "type": "dart",
-            "deviceId": "M2105K81AC"
+            "deviceId": "22081281AC"
         },
         {
             "name": "小米10",
