--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ app.*.map.json
 code-server-3.12.0-linux-arm64.tar.gz
 code-server-4.0.1-linux-arm64.tar.gz
 code-server-4.4.0-linux-arm64.tar.gz
+
+/tmp
