--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,8 @@
     // 悬停以查看现有属性的描述。
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [{
+    "configurations": [
+        {
             "name": "Linux",
             "request": "launch",
             "type": "dart",
@@ -14,7 +15,10 @@
             "request": "launch",
             "type": "dart",
             "deviceId": "chrome",
-            "args": ["--web-renderer","html"]
+            "args": [
+                "--web-renderer",
+                "html"
+            ]
         },
         {
             "name": "Mac Desktop",
@@ -29,16 +33,10 @@
             "deviceId": "windows"
         },
         {
-            "name": "平板",
+            "name": "小米平板5 12.4",
             "request": "launch",
             "type": "dart",
             "deviceId": "22081281AC"
-        },
-        {
-            "name": "小米10",
-            "request": "launch",
-            "type": "dart",
-            "deviceId": "Mi 10"
         },
         {
             "name": "小米10s",
@@ -53,10 +51,10 @@
             "deviceId": "2206123SC"
         },
         {
-            "name": "红米K30",
+            "name": "小米13",
             "request": "launch",
             "type": "dart",
-            "deviceId": "Redmi K30"
+            "deviceId": "2211133C"
         },
     ]
 }
