--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,13 +3,13 @@ description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.1.8+10
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  flutter_spinkit: "^4.1.2"
+  flutter_spinkit: ^5.2.0
   archive: ^3.1.2
   dio: ^4.0.0
   cupertino_icons: ^1.0.2
@@ -25,9 +25,10 @@ dependencies:
     git: https://github.com/TerminalStudio/flutter_pty
   global_repository:
     git: https://github.com/nightmare-space/global_repository
+  path: ^1.8.0
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  # flutter_test:
+  #   sdk: flutter
   flutter_lints: ^2.0.0
 flutter:
   uses-material-design: true
