--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,7 @@ if (localPropertiesFile.exists()) {
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
-    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+    throw new GradleException('Flutter SDK not found. Define location with flutter.sdk in the local.properties file.')
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
@@ -25,21 +25,21 @@ apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 // 本地编译注释以下代码
 // start
-def keystorePropertiesFile = rootProject.file("key.properties")
+def keystorePropertiesFile = rootProject.file('key.properties')
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 // end
 android {
     compileSdkVersion 31
     // ndkVersion "21.1.6352462"
-//     externalNativeBuild {
-// //            ndkBuild {
-// //                path 'jni/Android.mk'
-// //            }
-//         cmake {
-//             version "3.22.1"
-//         }
-//     }
+    //     externalNativeBuild {
+    // //            ndkBuild {
+    // //                path 'jni/Android.mk'
+    // //            }
+    //         cmake {
+    //             version "3.22.1"
+    //         }
+    //     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -56,7 +56,7 @@ android {
         // end
     }
     defaultConfig {
-        applicationId "com.nightmare.code"
+        applicationId 'com.nightmare.code'
         minSdkVersion 24
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
@@ -66,13 +66,43 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            minifyEnabled false
+            shrinkResources false
         }
         debug {
             signingConfig signingConfigs.release
+        }
+    }
+    repositories {
+        flatDir {
+            dirs 'libs'
         }
     }
 }
 
 flutter {
     source '../..'
+}
+dependencies {
+
+    implementation fileTree(include: ['*.jar', '*aar'], dir: 'libs')
+
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation 'com.qq.e.union:union:4.512.1382'
+    implementation 'com.pangle.cn:ads-sdk-pro:4.8.0.8'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.7.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.21"
 }
