--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: vscode_for_android
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.1.8+10
+version: 1.2.0+12
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
@@ -10,6 +10,9 @@ dependencies:
     sdk: flutter
 
   flutter_spinkit: ^5.2.0
+  intl: ^0.17.0
+  url_launcher: ^6.1.10
+  retrofit: ^3.0.1+1
   archive: ^3.1.2
   dio: ^4.0.0
   cupertino_icons: ^1.0.2
@@ -26,14 +29,20 @@ dependencies:
   global_repository:
     git: https://github.com/nightmare-space/global_repository
   path: ^1.8.0
+  device_info_plus: 8.1.0
+
 dev_dependencies:
   # flutter_test:
   #   sdk: flutter
   flutter_lints: ^2.0.0
+
 flutter:
   uses-material-design: true
   assets:
     - assets/
 
 
-# dependency_overrides:
+dependency_overrides:
+  permission_handler: ^10.2.0
+  global_repository:
+    path: ../global_repository
