--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: vscode_for_android
 description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.2.0+12
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
+version: 1.2.1+13
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
@@ -40,7 +40,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-
 
 dependency_overrides:
   permission_handler: ^10.2.0
