--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: vscode_for_android
-description: A new Flutter project.
+description: VS Code for Android
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 1.2.2+14
+version: 1.2.3+15
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
+  signale: ^0.0.9
   flutter_spinkit: ^5.2.0
   intl: ^0.17.0
   url_launcher: ^6.1.10
@@ -30,6 +30,9 @@ dependencies:
     git: https://github.com/nightmare-space/global_repository
   path: ^1.8.0
   device_info_plus: 8.1.0
+  meta: ^1.11.0
+  typed_data: ^1.3.2
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
