--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,20 @@
 name: vscode_for_android
 description: VS Code for Android
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 1.3.0+18
+version: 1.4.0
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   signale: ^0.0.9
   flutter_spinkit: ^5.2.0
-  intl: ^0.17.0
+  intl: ^0.19.0
   url_launcher: ^6.1.10
-  retrofit: ^3.0.1+1
+  retrofit: ^4.4.1
   archive: ^3.1.2
-  dio: ^4.0.0
+  dio: ^5.7.0
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   flutter_markdown: ^0.6.10+2
@@ -27,9 +27,9 @@ dependencies:
   flutter_pty:
     git: https://github.com/TerminalStudio/flutter_pty
   global_repository:
-    git: https://github.com/nightmare-space/global_repository
+    git: https://github.com/brian200508/global_repository
   path: ^1.8.0
-  device_info_plus: 8.1.0
+  device_info_plus: ^11.1.1
   meta: ^1.11.0
   typed_data: ^1.3.2
   async: ^2.11.0
@@ -37,7 +37,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
@@ -46,5 +46,8 @@ flutter:
 
 dependency_overrides:
   permission_handler: ^10.2.0
-  global_repository:
-    path: ../global_repository
+#  global_repository:
+#    path: ./global_repository
+#
+#  settings:
+#    path: ./settings
