--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download code-server
-        run:  wget -O assets/code-server-4.95.2-linux-amd64.tar.gz https://github.com/coder/code-server/releases/download/v4.95.2/code-server-4.95.2-linux-amd64.tar.gz
+        run:  wget -O assets/code-server-4.95.2-linux-arm64.tar.gz https://github.com/coder/code-server/releases/download/v4.95.2/code-server-4.95.2-linux-arm64.tar.gz
 
       - name: Set Up Java
         uses: actions/setup-java@v3.12.0
