--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -16,10 +16,13 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = 11
-        targetCompatibility = 11
+        sourceCompatibility = 17
+        targetCompatibility = 17
     }
 
+    kotlinOptions {
+        jvmTarget = 17
+    }
     signingConfigs {
         // 本地编译注释以下代码
         // start
