--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:extractNativeLibs="true"
-        android:label="Code FA"
+        android:label="Code LFA"
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
         tools:targetApi="n">
